--- a/templates/login.html
+++ b/templates/login.html
@@ -29,9 +29,9 @@
                 <button class="b1" type="submit">Submit</button> 
             </form>
         </div>
-        <p>Not registered? <form action="{{ url_for('sign_up') }}" method="post">
+        <div class="nr">Not registered? <form action="{{ url_for('sign_up') }}" method="post">
             <button id="create", type="submit">Create Account</button>
-        </form></p>
+        </form></div>
     </div>
     <script src="static/particle.js"></script>  
 </body>
