--- a/templates/request.html
+++ b/templates/request.html
@@ -29,7 +29,8 @@
             <br>
             <textarea name="description" placeholder="Description..." rows="5" cols="75"></textarea>
             <br>
-            <input type="file" name="attachment" accept=".pdf">
+            <label for="attachment" class="styled-in">Browse</label>
+            <input type="file" name="attachment" id="attachment" accept=".pdf" style="display: none;">
             <button type="submit">Make Request</button>
         </form>
     </div>
