--- a/static/style.css
+++ b/static/style.css
@@ -157,3 +157,33 @@ canvas {
     background-color: rgba(0, 0, 0, 0);
     cursor: pointer;
 }
+
+#hello{
+    font-size: 2em;
+    position: absolute;
+    color: rgb(244, 97, 100);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    letter-spacing: 15px;
+    text-transform: uppercase;
+    text-shadow: 0 0 5px #000;
+    font-weight: 900;
+    /* text-decoration:dashed; */
+    /* animation: epik 5s infinite; */
+}
+
+@keyframes epik {
+    25%{
+        transform: translate(50px, 0);
+        opacity: 0.5;
+    }
+    50%{
+        transform: translate(25px, 0);
+        opacity: 0.0;
+    }
+    75%{
+        transform: translate(0, 0);
+        opacity: 0.5;
+    }
+}
