--- a/templates/signup.html
+++ b/templates/signup.html
@@ -41,7 +41,7 @@
                 <button type="submit">Create Account</button> <!-- Modified button type to 'submit' -->
             </div>
         </form> <!-- Added form closing tag -->
-        <p><a href="login.html">Already have an account? </a></p>
+<!--         <p><a href="login.html">Already have an account? </a></p> -->
     </div>
     <script src="static/particle.js"></script>
     <script src="static/position_change.js"></script>
